tests222/tests2/test281.out
lli: <stdin>:1:1: error: expected top-level entity
line 5: variable seA is not defined
^
